function(add_test_snippet EXE_NAME LIB_NAME)
    add_executable(${EXE_NAME} ${EXE_NAME}.cpp)
    target_link_libraries(${EXE_NAME} ${LIB_NAME} ${ARGN})
    add_test(NAME ${EXE_NAME} COMMAND $<TARGET_FILE:${EXE_NAME}>)
endfunction()

add_test_snippet(serialize_test utility)
add_test_snippet(serialization_adapters_test utility)
target_link_libraries(serialization_adapters_test core)
add_test_snippet(shared_data_test utility)
add_test_snippet(logger_test utility)
target_link_libraries(logger_test core)
add_test_snippet(reactor_test utility)
add_test_snippet(asyncevent_test utility)
add_test_snippet(tcpserver_test utility)
add_test_snippet(tcpclient_test utility)
add_test_snippet(timer_test utility)
add_test_snippet(address_test utility)
add_test_snippet(channel_test utility)
add_test_snippet(config_test utility)
add_test_snippet(bridge_test utility)
add_test_snippet(ssl_test utility)

